# qml_practise

./: README.md  project.config
Flipable/: main.qml
QThread-Example-Codes/thread-example2/: guithread.cpp  guithread.h  main.cpp  main.qml  thread-example2.pro  workerclass.cpp  workerclass.h
QThread-Example-Codes/thread-example3/: main.cpp  thread-example3.pro  workerthread.h
QThread-Example-Codes/thread-example4/: main.cpp  mythread.h
QThread-Example-Codes/threading-example1/: main.cpp  threading-example1.pro  (+2 more)
StatesAndTransitions/: main.qml
TextArea/: main.qml
TextInput/: main.qml
animated-image/: main.qml
conditional-compilation/: Readme  conditional-compilation.pro  main.cpp  main.qml
import-js-qml/: jsfile.js  main.qml  qml.qrc
keyboardFocus/: MyClickableWidget.qml  main.qml
listview/: main.qml
mulitang-example-code/: MultiLanguagesSupport.pro  MultiLanguagesSupport.pro.user.4.8-pre1  README.txt  main.qml  mylang.h  mytranslator.h  qml.qrc
pointerbasics/: cppdisablecopyconstructor.txt  sample.pp
property-binding/: LineEdit.qml  main.qml
propertyqml/: main.cpp  main.qml  myclass.h
q_invokable/: datastote.cpp  datastote.h  main.cpp  main.qml  q_invokable.pro
qmltimers/: main.qml
qtbinding/: main.qml
qtcreatecomponent/: MyButton.qml  main.qml
qttimers/: main.cpp  mytimerclass.cpp  mytimerclass.h  qttimers.pro
quickviewexample/: MyItem.qml  main.cpp
thispointerqml/: main.qml
unit-test-example/unit-test2/: CMakeLists.txt  build_and_run_ut.sh  tst_testclass.cpp
unit-test-example/unit-test2/src/: myclass.cpp  myclass.h
(+24 files in other folders)
